# CHANGES TO v0.3.6 #

 * Expanded verbosity of `export()` for fixed-width format files and added a commented header containing column class and width information.
 * Exporting factors to fixed-width format now saves those values as integer rather than numeric.
 * Expanded test suite and separated tests into format-specific files. (#51)

# CHANGES TO v0.3.5 #

 * Export of CSVY files now includes commenting the yaml header by default. Import of CSVY accommodates this automatically. (#74)

# CHANGES TO v0.3.3 #

 * Export of CSVY files and metadata now supported by `export()`. (#73)
 * Import of CSVY files now stores dataset-level metadata in attributes of the output data.frame. (#73, h/t Tom Aldenberg)
 * When rio receives an unrecognized file format, it now issues a message. The new internal `.import.default()` and `.export.default()` then produce an error. This enables add-on packages to support additional formats through new s3 methods of the form `.import.rio_EXTENSION()` and `.export.rio_EXTENSION()`.

# CHANGES TO v0.3.2 #

 * Use S3 dispatch internally to call new (unexported) `.import()` and `.export()` methods. (#42, h/t Jason Becker)

# CHANGES TO v0.3.0 #

 * Release to CRAN.
 * Set a default numerical precision (of 2 decimal places) for export to fixed-width format.

# CHANGES TO v0.2.13 #

 * Import stats package for `na.omit()`.

# CHANGES TO v0.2.11 #

 * Added support for direct import from Google Sheets. (#60, #63, h/t Chung-hong Chan)

# CHANGES TO v0.2.7 #

 * Refactored remote file retrieval into separate (non-exported) function used by `import()`. (#62)
 * Added test sutie to test file conversion.
 * Expanded test suite to include test of all export formats.

# CHANGES TO v0.2.6 #

 * Cleaned up NAMESPACE file.

# CHANGES TO v0.2.5 #
